[package]
name = "enso-rs"
version = "0.1.0"
authors = ["Atul Varma <varmaa@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "libloaderapi",
    "wingdi",
    "errhandlingapi",
    "d3d11",
    "winerror"
] }
direct2d = "0.2"
