[package]
name = "enso"
version = "0.1.0"
authors = ["Atul Varma <varmaa@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.9", features = [
    "impl-default",
    "winuser",
    "processthreadsapi",
    "libloaderapi",
    "wingdi",
    "errhandlingapi",
    "psapi",
    "handleapi",
    "d3d11",
    "winerror"
] }
direct2d = "0.2"
directwrite = "0.1.4"
dyn-clone = "1.0.4"
dirs = "4.0.0"
